--- a/css/style.scss
+++ b/css/style.scss
@@ -25,3 +25,4 @@
 
 //blog
 @import "../blogTemplates/css/_blogTop.scss"; // ブログトップCSS(SCSS)を呼び出す。
+@import "../blogTemplates/css/_blogNew.scss"; // 新着一覧CSS(SCSS)を呼び出す。
