--- a/css/_single-newsTop.scss
+++ b/css/_single-newsTop.scss
@@ -1,4 +1,4 @@
-.priceSystemTop {
+.singleNewsTop {
   .headerWrapper {
     width: 100%;
     position: fixed;
@@ -48,8 +48,7 @@
         }
       }
       .fadein {
-        -webkit-transform: translateX(250px);
-        transform: taranslateX(250px);
+        transform: translateX(250px);
         z-index: 5;
         opacity: 1;
         transition: 0.4s;
@@ -119,7 +118,7 @@
     align-items: center;
     font-weight: bold;
     .headerNav__item {
-      margin-right: 40px;
+      margin-right: 24px;
       &:last-child {
         margin-right: 0;
       }
@@ -131,6 +130,7 @@
   }
 
   .innerRight {
+    margin-right: 30px;
     padding-bottom: 15px;
     align-items: flex-end;
     display: flex;
@@ -163,8 +163,10 @@
         padding-top: 8px;
       }
       .btn__square {
+        margin-right: 10px;
         @media screen and(max-width:450px) {
           margin-top: 8px;
+          margin-right: 0;
           text-align: center;
         }
       }
@@ -174,27 +176,19 @@
     }
   }
 
-  .priceSystemTop__img {
-    margin-top: 80px;
-    position: relative;
-    .subPage__title {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-    }
-    .priceSystemTop__img--s {
-      width: 100%;
-      height: 220px;
-    }
-  }
-  .breadcrumbs {
-    height: 50px;
+  .breadcrumbs__wrapper {
     background-color: #f8f8f8;
-    padding-left: 190px;
-    line-height: 50px;
-    @media screen and(max-width:600px) {
-      padding-left: 32px;
+    padding-right: 32px;
+
+    .breadcrumbs {
+      height: 50px;
+      padding-left: 190px;
+      padding-top: 25px;
+      margin-top: 80px;
+
+      @media screen and(max-width:1000px) {
+        padding-left: 32px;
+      }
     }
   }
 }
